feat: create CURD for users
